<resources>
    <string name="app_name">FinShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Главная</string>
    <string name="story">История</string>
    <string name="news">Новости</string>
    <string name="shop">Корзина</string>
    <string name="account">Аккаунт</string>
    <string name="enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
</resources>

