<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/story"
        android:icon="@drawable/story"
        android:title="@string/story"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/news"
        android:icon="@drawable/news"
        android:title="@string/news"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/shop"
        android:icon="@drawable/shop"
        android:title="@string/shop"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/account"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom">
    </item>
</menu>